# cagr-goblin

./: .gitignore  README.md  graph.dot  main.py  pyproject.toml
curricufsc/: __main__.py  graph_generator.py  pdf_extractor.py
